# dagster_plus_cost_insights

./: .gitignore  ANSWERS.md  AZURE_SERVICES.md  COMPLETE_COVERAGE.md  COMPLETE_IMPLEMENTATION.md  CONTRIBUTING.md  EXTENDING_COST_INSIGHTS.md  FINAL_GAP_ANALYSIS.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_GAPS.md  LICENSE  METRIC_NAMES.md  MISSING_IMPLEMENTATIONS.md  PUBLISHING_GUIDE.md  PUBLISHING_TO_PYPI.md  README.md  REAL_TIME_VS_SCHEDULED.md  UNITS_DOCUMENTATION.md  UNITS_VERIFICATION.md  UPDATED_IMPLEMENTATION.md  publish.sh  pyproject.toml
.github/workflows/: publish.yml
dagster_insights/: README.md  __init__.py  insights_utils.py
dagster_insights/aws/: __init__.py
dagster_insights/aws/athena/: __init__.py  athena_utils.py  dbt_wrapper.py  insights_athena_resource.py
dagster_insights/aws/glue/: __init__.py  glue_utils.py  insights_glue_resource.py
dagster_insights/aws/rds/: __init__.py  dbt_wrapper.py  insights_rds_resource.py  rds_utils.py
dagster_insights/azure/: __init__.py
dagster_insights/azure/data_factory/: __init__.py  data_factory_utils.py  insights_data_factory_resource.py
dagster_insights/azure/database/: __init__.py  azure_database_utils.py  dbt_wrapper.py  insights_azure_database_resource.py
dagster_insights/azure/sql/: __init__.py  dbt_wrapper.py  insights_azuresql_resource.py  sql_utils.py
dagster_insights/azure/synapse/: __init__.py  dbt_wrapper.py  insights_synapse_resource.py  synapse_utils.py
dagster_insights/databricks/: DATABRICKS_EXECUTION_METHODS.md  __init__.py  databricks_utils.py  dbt_wrapper.py  insights_databricks_resource.py  job_tracker.py  system_tables.py  workspace_client_wrapper.py
dagster_insights/gcp/: __init__.py
dagster_insights/gcp/cloud_sql/: __init__.py  cloud_sql_utils.py  dbt_wrapper.py  insights_cloud_sql_resource.py
dagster_insights/mysql/: __init__.py  dbt_wrapper.py  insights_mysql_resource.py  mysql_utils.py
dagster_insights/postgresql/: __init__.py  dbt_wrapper.py  definitions.py  insights_postgresql_resource.py  neon.py  postgresql_utils.py
dagster_insights/redshift/: __init__.py  dbt_wrapper.py  insights_redshift_resource.py  redshift_utils.py
dagster_insights/spark/: __init__.py
dagster_insights/spark/dataproc/: __init__.py  dataproc_utils.py  insights_dataproc_resource.py
dagster_insights/spark/emr/: __init__.py  emr_utils.py  insights_emr_resource.py
dagster_insights/storage/: __init__.py  storage_utils.py
dagster_insights/storage/azure/: __init__.py  azure_insights.py  definitions.py
dagster_insights/storage/gcs/: __init__.py  definitions.py  gcs_insights.py
dagster_insights/storage/s3/: __init__.py  definitions.py  s3_insights.py
dagster_insights/trino/: __init__.py  dbt_wrapper.py  insights_trino_resource.py  trino_utils.py
docs/: DATABRICKS_COVERAGE.md  IMPLEMENTATION_SUMMARY.md  ORIGINAL_README.md
examples/: neon_cost_tracking.py  postgresql_cost_tracking.py
